<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistroActivity">

    <TextView
            android:text="@string/registro"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:layout_width="265dp"
            android:layout_height="45dp"
            android:id="@+id/tv" android:layout_marginTop="68dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="73dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="73dp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="85dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="399dp"
            android:layout_height="363dp"
            android:padding="25dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="11dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="85dp"
            app:layout_constraintTop_toBottomOf="@+id/tv" android:id="@+id/linearLayout">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:hint="@string/email"
                android:id="@+id/etRegister_Email"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_marginTop="15dp"
                android:hint="@string/insert_password"
                android:id="@+id/etRegister_Pass"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_marginTop="15dp"
                android:hint="@string/repeat_password"
                android:id="@+id/et_Register_Pass2"/>
        <Button
                android:text="@string/accept"
                android:layout_width="207dp"
                android:layout_height="37dp"
                android:layout_marginTop="60dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/register_button_background"
                android:id="@+id/btAceptar"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
