<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        tools:context=".MainActivity">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/loggin_logo"
            android:id="@+id/imageView" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="396dp"
            android:layout_height="296dp"
            android:padding="20dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="7dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="67dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView">
        <EditText
                android:layout_width="337dp"
                android:layout_height="35dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:drawableStart="@mipmap/loggin_user_icon"
                android:hint="@string/skater"
                android:drawablePadding="10dp"
                android:layout_gravity="center"
                android:background="@drawable/login_edittext_background"
                android:id="@+id/etEmail"/>
        <EditText
                android:layout_width="337dp"
                android:layout_height="35dp"
                android:inputType="textPassword"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/password"
                android:layout_gravity="center"
                android:drawableStart="@mipmap/loggin_pas_icon"
                android:drawablePadding="10dp"
                android:background="@drawable/login_edittext_background"
                android:id="@+id/etPassword"/>
        <Button
                android:text="@string/login"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:onClick="onButtonClicked"
                android:layout_marginTop="30dp"
                android:layout_width="237dp"
                android:layout_height="33dp"
                android:layout_gravity="center"
                android:background="@drawable/login_button_background"
                android:id="@+id/btLogin"
        />
        <Button
                android:text="@string/sign_in"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:onClick="onButtonClicked"
                android:layout_marginTop="20dp"
                android:layout_width="237dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/login_button_background"
                android:id="@+id/btSign_in"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>