<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        tools:context=".LoginActivity">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/loggin_logo"
            android:id="@+id/imageView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.497" android:layout_marginTop="88dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="353dp"
            android:layout_height="245dp"
            android:padding="20dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="7dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:id="@+id/linearLayout2"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp">
        <EditText
                android:layout_width="317dp"
                android:layout_height="35dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:drawableStart="@mipmap/loggin_user_icon"
                android:hint="@string/skater"
                android:drawablePadding="10dp"
                android:layout_gravity="center"
                android:background="@drawable/login_edittext_background"
                android:id="@+id/etEmail"/>
        <EditText
                android:layout_width="319dp"
                android:layout_height="35dp"
                android:inputType="textPassword"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/password"
                android:layout_gravity="center"
                android:drawableStart="@mipmap/loggin_pas_icon"
                android:drawablePadding="10dp"
                android:background="@drawable/login_edittext_background"
                android:id="@+id/etPassword"/>
        <Button
                android:text="@string/login"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:onClick="onButtonClicked"
                android:layout_marginTop="30dp"
                android:layout_width="237dp"
                android:layout_height="33dp"
                android:layout_gravity="center"
                android:background="@drawable/login_button_background"
                android:id="@+id/btLogin"
        />
        <Button
                android:text="@string/sign_in"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:onClick="onButtonClicked"
                android:layout_marginTop="20dp"
                android:layout_width="237dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/login_button_background"
                android:id="@+id/btSign_in"/>

    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="292dp"
            android:layout_height="53dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="39dp"
            android:layout_marginEnd="41dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" app:layout_constraintHorizontal_bias="0.851">

        <com.google.android.gms.common.SignInButton
                android:id="@+id/btGoogle"
                android:layout_width="match_parent"
                android:layout_height="match_parent" tools:layout_editor_absoluteY="420dp"
                android:layout_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintHorizontal_bias="0.0"/>
        //android:onClick="onButtonClicked"/>
        <com.facebook.login.widget.LoginButton
                android:id="@+id/btFacebook"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>